--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -24,3 +24,27 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cta {
+  display: inline-block;
+  background-color: var(--color-brand--2);
+  color: var(--color-dark--1);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 1rem 3rem;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.cta:hover {
+  background-color: var(--color-brand--1);
+}
