--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -1,8 +1,9 @@
 .countryList {
   width: 100%;
-  height: 65vh;
+  height: auto;
+  max-height: 100%;
   list-style: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 
   display: grid;
