--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  height: 100%;
 }
 
 body {
@@ -31,6 +32,12 @@ body {
   color: var(--color-light--2);
   font-weight: 400;
   line-height: 1.6;
+  height: 100%;
+  overflow: hidden; /* Prevent body scroll when using 100vh layouts */
+}
+
+#root {
+  height: 100%;
 }
 
 label {
